mash: Fix a11y docked magnifier following caret bounds

DockedMagnifierController observes IMEBridge like MagnifierController:
  https://chromium-review.googlesource.com/c/chromium/src/+/1387669

Bug: 876510
Test: Docked magnifier follows caret bounds while typing in SPM, KSV.
Change-Id: I9f7b0ca4b3c7f8faf357124e26c519b95e73a677
Reviewed-on: https://chromium-review.googlesource.com/c/1399285
Commit-Queue: Michael Wasserman <msw@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620566}
Former-commit-id: 15f20f48842d18ebd868891cd44a7a7e34864713