ash/magnifier/magnifier_utils.cc
@@ -2,16 +2,20 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#include "ash/magnifier/magnifier_scale_utils.h"
+#include "ash/magnifier/magnifier_utils.h"
 
 #include <algorithm>
 #include <cmath>
 
+#include "ash/shell.h"
 #include "base/logging.h"
 #include "base/numerics/ranges.h"
+#include "ui/aura/window.h"
+#include "ui/aura/window_tree_host.h"
+#include "ui/base/ime/ime_bridge.h"
 
 namespace ash {
-namespace magnifier_scale_utils {
+namespace magnifier_utils {
 
 namespace {
 
@@ -54,5 +58,17 @@ float GetNextMagnifierScaleValue(int delta_index,
   return base::ClampToRange(new_scale, min_scale, max_scale);
 }
 
-}  // namespace magnifier_scale_utils
+ui::InputMethod* GetInputMethod(aura::Window* root_window) {
+  ui::IMEBridge* bridge = ui::IMEBridge::Get();
+  if (bridge && bridge->GetInputContextHandler())
+    return bridge->GetInputContextHandler()->GetInputMethod();
+
+  if (root_window && root_window->GetHost())
+    return root_window->GetHost()->GetInputMethod();
+
+  // Needed by a handful of browser tests that use MockInputMethod.
+  return Shell::GetRootWindowForNewWindows()->GetHost()->GetInputMethod();
+}
+
+}  // namespace magnifier_utils
 }  // namespace ash
